--- a/index.html
+++ b/index.html
@@ -255,8 +255,8 @@
                 </div>
                 <div class="col-6">
                     <div class="form-group">
-                        <label for="faculty-place">Current Institution/Location</label>
-                        <input type="text" id="faculty-place" placeholder="e.g., University of California">
+                        <label for="faculty-place">Place</label>
+                        <input type="text" id="faculty-place" placeholder="e.g., Bengaluru, India">
                     </div>
                 </div>
 
@@ -686,3 +686,4 @@
     </script>
 </body>
 </html>
+
