--- a/index.html
+++ b/index.html
@@ -563,13 +563,13 @@
             
             // 4. Generate recommendation
             if (data.score >= 90) {
-                recommendation = "🌟 Strong Recommend - Exceptional candidate with no significant weaknesses";
+                recommendation = "Strong Recommend - Exceptional candidate with no significant weaknesses";
             } else if (data.score >= 75) {
-                recommendation = "👍 Recommend - Solid candidate with good qualifications";
+                recommendation = "Recommend - Solid candidate with good qualifications";
             } else if (data.score >= 60) {
-                recommendation = "🤔 Consider with Mentorship - Potential but needs development";
+                recommendation = " Consider with Mentorship - Potential but needs development";
             } else {
-                recommendation = "⚠️ Not Recommended - Does not meet minimum requirements";
+                recommendation = "Not Recommended - Does not meet minimum requirements";
             }
             
             // Format analysis
@@ -686,4 +686,5 @@
     </script>
 </body>
 </html>
+
 
