--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
 
                 <div class="col-4">
                     <div class="form-group">
-                        <label for="student-feedback">Student Feedback (1-10)</label>
+                        <label for="student-feedback">Average Student Feedback (1-10)</label>
                         <input type="number" id="student-feedback" min="1" max="10" placeholder="e.g., 8">
                     </div>
                 </div>
@@ -771,3 +771,4 @@
     </script>
 </body>
 </html>
+
